# Warp2Api

./: .gitignore  Dockerfile  Dockerfile-choreo  README.md  openai_compat.py  pyproject.toml  server.py  start.py
.github/workflows/: docker-build.yml
proto/: attachment.proto  citations.proto  debug.proto  file_content.proto  input_context.proto  options.proto  request.proto  response.proto  suggestions.proto  task.proto  todo.proto
protobuf2openai/: __init__.py  app.py  bridge.py  config.py  helpers.py  logging.py  models.py  packets.py  reorder.py  router.py  sse_transform.py  state.py
warp2protobuf/: __init__.py
warp2protobuf/api/: __init__.py  protobuf_routes.py
warp2protobuf/config/: __init__.py  models.py  settings.py
warp2protobuf/core/: __init__.py  auth.py  logging.py  protobuf.py  protobuf_utils.py  schema_sanitizer.py  server_message_data.py  session.py  stream_processor.py
warp2protobuf/warp/: __init__.py  api_client.py  response.py
